2002-12-15  Daniel Elstner  <daniel.elstner@gmx.net>

	* macros/cxx.m4: Get rid of all deprecated autoconf constructs.
	* macros/pcre.m4: ditto.

2002-12-15  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Replace the check for gtkmm >= 2.1.0 with a test
	for Glib::set_application_name().  This should be much safer.

2002-12-15  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/main.cc (main): Use Glib::set_application_name() if building
	for gtkmm 2.1.

2002-12-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): On make distcheck,
	pass --enable-warnings=hardcore to ./configure.

2002-12-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (AM_INIT_AUTOMAKE): Require automake >= 1.6 and
	make use of the "check-news" option.

	* Makefile.am (EXTRA_DIST): Get rid of EXTRA_DIST and properly
	put the files into dist_noinst_SCRIPTS and dist_noinst_DATA.

2002-12-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* autogen.sh: Delete all scripts and symbolic links that will
	be recreated by automake --add-missing.

2002-12-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* regexxer.desktop: Set StartupNotify=true in order to take
	advantage of the startup notification feature in GNOME 2.1.

2002-12-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* autogen.sh: Incorporate bits of the standard GNOME autogen.sh,
	and make use of aclocal-1.7 and automake-1.7 if available.

	* configure.ac: AC_PREREQ([2.53]) to make sure the Debian magic
	chooses the right autoconf version.
	(AM_CONFIG_HEADER): Replace with AC_CONFIG_HEADERS().  This
	could create a dependency on automake-1.7, don't know for sure.

2002-12-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/imagebutton.{cc,h} (ImageButton): Add a 'name' argument to
	the ctor which is used to set the accessibility object's name.

	* src/controller.cc (create_action_area): Set accessibility
	names for all image-only buttons.
